--- a/GTCCIASBC-2025.ipynb
+++ b/GTCCIASBC-2025.ipynb
@@ -28,8 +28,10 @@
         "from PIL import Image\n",
         "\n",
         "# Physical constants\n",
-        "hbar = 1.0545718e-34\n",
-        "m_e = 9.1093837e-31\n",
+        "hbar = 1.0545718e-34  # J·s\n",
+        "m_e = 9.1093837e-31   # kg\n",
+        "eV = 1.60217662e-19   # J/eV\n",
+        "kcal_per_mol = 23.06  # eV to kcal/mol\n",
         "\n",
         "# PIB Model Functions\n",
         "def pib_wavefunction(x, n, L):\n",
@@ -45,23 +47,23 @@
         "    for n in range(1, n_max + 1):\n",
         "        psi = pib_wavefunction(x, n, L)\n",
         "        energy = pib_energy(n, L)\n",
-        "        ax1.plot(x * 1e9, psi + energy / max_energy, label=f\"n={n}\")\n",
-        "    ax1.set_title(\"PIB Wavefunctions\")\n",
-        "    ax1.set_xlabel(\"x (nm)\")\n",
-        "    ax1.set_ylabel(\"ψ(x) + E (scaled)\")\n",
+        "        ax1.plot(x * 1e9, psi + energy / max_energy, label=f'n={n}')\n",
+        "    ax1.set_title('PIB Wavefunctions')\n",
+        "    ax1.set_xlabel('x (nm)')\n",
+        "    ax1.set_ylabel('ψ(x) + E (scaled)')\n",
         "    ax1.legend()\n",
         "    energies = []\n",
         "    particles_filled = 0\n",
         "    for n in range(1, n_max + 1):\n",
         "        energy = pib_energy(n, L)\n",
         "        energies.append(energy)\n",
-        "        ax2.axhline(energy, linestyle='-', label=f\"n={n}\")\n",
+        "        ax2.axhline(energy, linestyle='-', label=f'n={n}')\n",
         "        if particles_filled < pib_num_particles:\n",
         "            remaining = min(2, pib_num_particles - particles_filled)\n",
-        "            ax2.text(0.5, energy, f\"{remaining} particle(s)\", verticalalignment='bottom')\n",
+        "            ax2.text(0.5, energy, f'{remaining} particle(s)', verticalalignment='bottom')\n",
         "            particles_filled += remaining\n",
-        "    ax2.set_title(\"PIB Energy Levels\")\n",
-        "    ax2.set_ylabel(\"Energy (J)\")\n",
+        "    ax2.set_title('PIB Energy Levels')\n",
+        "    ax2.set_ylabel('Energy (J)')\n",
         "    ax2.legend()\n",
         "    if energies:\n",
         "        ax2.set_ylim(0, max(energies) * 1.1)\n",
@@ -85,23 +87,23 @@
         "    for ml in range(0, n_max + 1):\n",
         "        psi_real = np.real(por_wavefunction(phi, ml))\n",
         "        energy = por_energy(ml, R)\n",
-        "        ax1.plot(phi, psi_real + energy / max_energy, label=f\"ml={ml}\")\n",
-        "    ax1.set_title(\"POR Wavefunctions (Real Part)\")\n",
-        "    ax1.set_xlabel(\"φ (rad)\")\n",
-        "    ax1.set_ylabel(\"Re[ψ(φ)] + E (scaled)\")\n",
+        "        ax1.plot(phi, psi_real + energy / max_energy, label=f'ml={ml}')\n",
+        "    ax1.set_title('POR Wavefunctions (Real Part)')\n",
+        "    ax1.set_xlabel('φ (rad)')\n",
+        "    ax1.set_ylabel('Re[ψ(φ)] + E (scaled)')\n",
         "    ax1.legend()\n",
         "    energies = []\n",
         "    particles_filled = 0\n",
         "    for ml in range(0, n_max + 1):\n",
         "        energy = por_energy(ml, R)\n",
         "        energies.append(energy)\n",
-        "        ax2.axhline(energy, linestyle='-', label=f\"ml=±{ml}\" if ml > 0 else \"ml=0\")\n",
+        "        ax2.axhline(energy, linestyle='-', label=f'ml=±{ml}' if ml > 0 else 'ml=0')\n",
         "        if particles_filled < por_num_particles:\n",
         "            remaining = min(2 if ml == 0 else 4, por_num_particles - particles_filled)\n",
-        "            ax2.text(0.5, energy, f\"{remaining} particle(s)\", verticalalignment='bottom')\n",
+        "            ax2.text(0.5, energy, f'{remaining} particle(s)', verticalalignment='bottom')\n",
         "            particles_filled += remaining\n",
-        "    ax2.set_title(\"POR Energy Levels\")\n",
-        "    ax2.set_ylabel(\"Energy (J)\")\n",
+        "    ax2.set_title('POR Energy Levels')\n",
+        "    ax2.set_ylabel('Energy (J)')\n",
         "    ax2.legend()\n",
         "    if energies:\n",
         "        ax2.set_ylim(-max(energies) * 0.1, max(energies) * 1.1)\n",
@@ -116,19 +118,23 @@
         "    pib_total_energy = 0\n",
         "    particles_filled = 0\n",
         "    n = 1\n",
+        "    print('PIB Energy Levels:')\n",
         "    while particles_filled < pib_num_particles:\n",
         "        energy = pib_energy(n, L)\n",
         "        particles_to_add = min(2, pib_num_particles - particles_filled)\n",
         "        pib_total_energy += particles_to_add * energy\n",
+        "        print(f'  n={n}: {energy:.2e} J, {particles_to_add} particle(s)')\n",
         "        particles_filled += particles_to_add\n",
         "        n += 1\n",
         "    por_total_energy = 0\n",
         "    particles_filled = 0\n",
         "    ml = 0\n",
+        "    print('POR Energy Levels:')\n",
         "    while particles_filled < por_num_particles:\n",
         "        energy = por_energy(ml, R)\n",
         "        particles_to_add = min(2 if ml == 0 else 4, por_num_particles - particles_filled)\n",
         "        por_total_energy += particles_to_add * energy\n",
+        "        print(f'  ml=±{ml}' if ml > 0 else f'  ml={ml}: {energy:.2e} J, {particles_to_add} particle(s)')\n",
         "        particles_filled += particles_to_add\n",
         "        ml += 1\n",
         "    ase = pib_total_energy - por_total_energy\n",
@@ -143,15 +149,19 @@
       "source": [
         "import ipywidgets as widgets\n",
         "from IPython.display import display, clear_output\n",
-        "from IPython.display import Output\n",
+        "from ipywidgets import Output\n",
+        "\n",
+        "# Physical constants for conversions\n",
+        "eV = 1.60217662e-19  # J/eV\n",
+        "kcal_per_mol = 23.06  # eV to kcal/mol\n",
         "\n",
         "# Create widgets\n",
-        "L_input = widgets.FloatText(value=1.0, description='L (nm):')\n",
+        "L_input = widgets.FloatText(value=1.03, description='L (nm):')\n",
         "R_input = widgets.FloatText(value=0.139, description='R (nm):')\n",
         "n_max_input = widgets.IntText(value=3, description='n_max:')\n",
         "pib_particles_input = widgets.IntText(value=6, description='PIB Particles:')\n",
         "por_particles_input = widgets.IntText(value=6, description='POR Particles:')\n",
-        "plot_button = widgets.Button(description='Plot')\n",
+        "plot_button = widgets.Button(description='Calculate and Plot')\n",
         "\n",
         "# Create output widget\n",
         "output = Output()\n",
@@ -182,9 +192,9 @@
         "        plot_pib(L, n_max, pib_num_particles)\n",
         "        plot_por(R, n_max, por_num_particles)\n",
         "        pib_energy, por_energy, ase = calculate_energies(L, R, pib_num_particles, por_num_particles)\n",
-        "        print(f'PIB Energy ({pib_num_particles} particles): {pib_energy:.2e} J')\n",
-        "        print(f'POR Energy ({por_num_particles} particles): {por_energy:.2e} J')\n",
-        "        print(f'Aromatic Stabilization Energy: {ase:.2e} J')\n",
+        "        print(f'\\nTotal PIB Energy ({pib_num_particles} particles): {pib_energy:.2e} J ({pib_energy/eV:.2f} eV, {pib_energy/eV*kcal_per_mol:.2f} kcal/mol)')\n",
+        "        print(f'Total POR Energy ({por_num_particles} particles): {por_energy:.2e} J ({por_energy/eV:.2f} eV, {por_energy/eV*kcal_per_mol:.2f} kcal/mol)')\n",
+        "        print(f'Aromatic Stabilization Energy: {ase:.2e} J ({ase/eV:.2f} eV, {ase/eV*kcal_per_mol:.2f} kcal/mol)')\n",
         "\n",
         "plot_button.on_click(on_plot_button_clicked)"
       ]
